	  to simplify bring up of the SAMA5 (it will probably be removed
	  later) (2013-7-26).
	* The sama5d3x-ek/hello now runs correctly (2013-7-28).
	* configs/sama5d3x-ek/ostest/:  This configuration has been modified
	  to run out NOR flash.  More work is still needed to reconfigure the
	  SMC so the the NOR flash can work with the high clock (2013-7-28).
	* arch/arm/src/sama5/sam_clockconfig.c/h and
	  configs/sama5d3x-ek/src/sam_norflash.c:  Add a file structure that
	  will (eventually) support reconfiguration of NOR flash when NuttX
	  boots from NOR FLASH (2013-7-29).
	* arch/arm/src/sama5/chip/sam_hsmc/h:  SAMA5 HSMC register
	  defintion file (2013-7-29)
	* configs/sama5d3x-ek/src/sam_norflash.c:  Add board specific
	  logic to re-configure the SAMA5D3x-EK NOR FLASH before while
	  running out of NOR FLASH.  We need to change the NOR FLASH
	  timing BEFORE increasing the main clock (2013-7-29).
	* configs/sama5d3-ek/norboot and src/nor_main.c:  The norboot
	  configuration to help debug NuttX in NOR flash.  It runs
	  out of ISRAM, configures NOR FLASH, then waits for you to
	  break in with a debugger to start the program in NOR FLASH
	  (2013-7-29).
	* arch/arm/src/armv7-a/arm_cache.S:  Separate the bigger cache
	  operations into separater files (2013-7-29).
	* arch/arm/src/stm32/stm32_dac.c:  Fixed numerous DAC driver
	  errors and added support for DAC DMA (contributed by John
	  Wharington, 2013-7-30).
	* arch/arm/src/stm32/stm32f30xx_i2c.c:  An I2C driver for
	  the STM32 F3 family from John Wharington (2013-7-30).
	* arch/arm/include/armv7-m:  Add irqdisable() (2013-7-30);
	* configs/sama5d3-ek/src/nor_main.c:  Now disables interrupts
	  before jumping to NOR flash (2013-7-30).
	* configs/sama5d3-ek/nsh:  Add an NSH configuration for the
	  SAMA5D3x-EK (2013-7-31)
	* configs/sama5d3-ek/src/sam_cxxinitialize.c:  Add C++ support
	  (2013-7-31).

6.30 2013-xx-xx Gregory Nutt <gnutt@nuttx.org>